--- a/index.html
+++ b/index.html
@@ -148,6 +148,17 @@
     </section>
 </main>
 
+<footer class="footer">
+    <section class="copy-right">
+        <div class="container">
+            <div class="copy-right__wrapper">
+                <p class="copy-right__text">Copyright © 2023-2024 </p>
+                <p class="copy-right__text">َArman Zavvari Front-End Developer</p>
+            </div>
+        </div>
+    </section>
+</footer>
+
 <script src="scripts/app.js"></script>
 </body>
 </html>
