--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </ul>
             </nav>
             <a href="#" class="header__link">Contact us</a>
+            <span class="header__icon"><i class="fa fa-bars"></i></span>
         </section>
         <section class="header-bottom">
             <div class="header-content">
@@ -65,95 +66,99 @@
 </header>
 
 <main class="main">
-    <div class="container">
-        <section class="works">
+    <section class="works">
+        <div class="container">
             <h5 class="works__text">HOW IT WORK</h5>
             <h2 class="works__title">Three Simple Step To Started Working Process</h2>
             <div class="works-content">
                 <div class="works-content__item">
                     <h4 class="works-content__title">Research Project</h4>
-                        <p class="works-content__text">There are many variations of passages of Lorem Ipsum
-                            available</p>
+                    <p class="works-content__text">There are many variations of passages of Lorem Ipsum
+                        available</p>
                 </div>
-                
-                
                 <div class="works-content__item">
                     <h4 class="works-content__title">Targeting</h4>
-                        <p class="works-content__text">There are many variations of passages of Lorem Ipsum
-                            available</p>
+                    <p class="works-content__text">There are many variations of passages of Lorem Ipsum
+                        available</p>
                 </div>
                 <div class="works-content__item">
                     <h4 class="works-content__title">Research Project</h4>
-                        <p class="works-content__text">There are many variations of passages of Lorem Ipsum
-                            available</p>
+                    <p class="works-content__text">There are many variations of passages of Lorem Ipsum
+                        available</p>
                 </div>
             </div>
             <div class="works-img">
                 <img src="images/main-img.svg" alt="Work Image" class="works-img__img">
             </div>
-        </section>
-    </div>
-
+        </div>
+    </section>
     <section class="person-comments">
         <div class="container">
             <h2 class="person-comments__title">You’re in a good hand</h2>
-            <p class="person-comments__text">There are many variations of passages of Lorem Ipsum available, but the
-                majority have suffered.</p>
-
-                <div class="comments-container">
-                    <div class="comments">
-                        <div class="comment">
-                            <div class="comment__content">
-                                <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a lot
-                                    of mistyped orders. So with Company, the ability to see the order directly from the customer
-                                    makes it so streamlined.</p>
-                            </div>
-                            <div class="comment__info">
-                                <img src="images/person-1.png" alt="" class="comment__img">
-                                <p class="comment__person">Martin Jones, Creative Cons</p>
-                            </div>
+            <p class="person-comments__text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered.</p>
+            <div class="comments-container">
+                <div class="comments">
+                    <div class="comment">
+                        <div class="comment__content">
+                            <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a
+                                lot
+                                of mistyped orders. So with Company, the ability to see the order directly from the
+                                customer
+                                makes it so streamlined.</p>
                         </div>
-                        <div class="comment">
-                            <div class="comment__content">
-                                <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a lot
-                                    of mistyped orders. So with Company, the ability to see the order directly from the customer
-                                    makes it so streamlined.</p>
-                            </div>
-                            <div class="comment__info">
-                                <img src="images/person-2.png" alt="" class="comment__img">
-                                <p class="comment__person">Martin Jones, Creative Cons</p>
-                            </div>
-                        </div>
-                        <div class="comment">
-                            <div class="comment__content">
-                                <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a lot
-                                    of mistyped orders. So with Company, the ability to see the order directly from the customer
-                                    makes it so streamlined.</p>
-                            </div>
-                            <div class="comment__info">
-                                <img src="images/person-3.png" alt="" class="comment__img">
-                                <p class="comment__person">Martin Jones, Creative Cons</p>
-                            </div>
+                        <div class="comment__info">
+                            <img src="images/person-1.png" alt="" class="comment__img">
+                            <p class="comment__person">Martin Jones, Creative Cons</p>
                         </div>
                     </div>
-                    <div class="companies">
-                        <img src="images/logo-1.svg" alt="Logo" class="companies__img">
-                        <img src="images/logo-2.svg" alt="Logo" class="companies__img">
-                        <img src="images/logo-3.svg" alt="Logo" class="companies__img">
-                        <img src="images/logo-4.svg" alt="Logo" class="companies__img">
-                        <img src="images/logo-5.svg" alt="Logo" class="companies__img">
+                    <div class="comment">
+                        <div class="comment__content">
+                            <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a
+                                lot
+                                of mistyped orders. So with Company, the ability to see the order directly from the
+                                customer
+                                makes it so streamlined.</p>
+                        </div>
+                        <div class="comment__info">
+                            <img src="images/person-2.png" alt="" class="comment__img">
+                            <p class="comment__person">Martin Jones, Creative Cons</p>
+                        </div>
+                    </div>
+                    <div class="comment">
+                        <div class="comment__content">
+                            <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a
+                                lot
+                                of mistyped orders. So with Company, the ability to see the order directly from the
+                                customer
+                                makes it so streamlined.</p>
+                        </div>
+                        <div class="comment__info">
+                            <img src="images/person-3.png" alt="" class="comment__img">
+                            <p class="comment__person">Martin Jones, Creative Cons</p>
+                        </div>
                     </div>
                 </div>
+                <div class="companies">
+                    <img src="images/logo-1.svg" alt="Logo" class="companies__img">
+                    <img src="images/logo-2.svg" alt="Logo" class="companies__img">
+                    <img src="images/logo-3.svg" alt="Logo" class="companies__img">
+                    <img src="images/logo-4.svg" alt="Logo" class="companies__img">
+                    <img src="images/logo-5.svg" alt="Logo" class="companies__img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+            </div>
         </div>
     </section>
 </main>
-
 <footer class="footer">
     <section class="copy-right">
         <div class="container">
             <div class="copy-right__wrapper">
-                <p class="copy-right__text">Copyright © 2023-2024 </p>
-                <p class="copy-right__text">َArman Zavvari Front-End Developer</p>
+                <em class="copy-right__text">Copyright © 2023-2024 </em>
+                <em class="copy-right__text">Arman Zavvari, Front-End Developer</em>
             </div>
         </div>
     </section>
