add contact and about pages

--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@
                 </div>
                 <ul class="menu">
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Home</a>
+                        <a class="menu__link" href="./index.html">Home</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">About</a>
+                        <a class="menu__link" href="./about.html">About</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">How it work</a>
+                        <a class="menu__link" href="#how it work">How it work</a>
                     </li>
                     <li class="menu__item">
                         <a class="menu__link" href="#">Clients</a>
                     </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Portfolio</a>
-                    </li>
                 </ul>
             </nav>
-            <a href="#" class="header__link">Contact us</a>
+            <a href="./contact.html" class="header__link">Contact us</a>
             <span class="header__icon"><i class="fa fa-bars"></i></span>
         </section>
         <section class="header-bottom">
@@ -52,7 +49,7 @@
                             randomised words which don't
                         </p>
                         <div class="header-content__links">
-                            <a href="#" class="header-content__link">Contact us</a>
+                            <a href="./contact.html" class="header-content__link">Contact us</a>
                             <a href="#" class="header-content__link">See our works</a>
                         </div>
                     </div>
@@ -66,7 +63,7 @@
 </header>
 
 <main class="main">
-    <section class="works">
+    <section class="works" id="how it work">
         <div class="container">
             <h5 class="works__text">HOW IT WORK</h5>
             <h2 class="works__title">Three Simple Step To Started Working Process</h2>
@@ -113,7 +110,7 @@
                     </div>
                     <div class="comment">
                         <div class="comment__content">
-                            <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a
+                      <p class="comment__body">Life before Company was very chaotic we got a lot of phone calls, a
                                 lot
                                 of mistyped orders. So with Company, the ability to see the order directly from the
                                 customer
@@ -157,7 +154,7 @@
     <section class="copy-right">
         <div class="container">
             <div class="copy-right__wrapper">
-                <em class="copy-right__text">Copyright © 2023-2024 </em>
+                <em class="copy-right__text">Copyright © 2024-2025 </em>
                 <em class="copy-right__text">Arman Zavvari, Front-End Developer</em>
             </div>
         </div>
