Add modal for 'Not Available' message

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                         <a class="menu__link" href="#">How it work</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Clients</a>
+                        <a id="myBtn" class="menu__link" href="#">Clients</a>
                     </li>
                 </ul>
             </nav>
@@ -53,6 +53,21 @@
                 </div>
                 <div class="header-content__right">
                     <img src="images/main-img.svg" alt="Work Image" class="works-img__img">
+                </div>
+            </div>
+        </section>
+        <section id="myModal" class="modal">
+            <div>
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                  <div class="modal-inner-context">
+                    <div>
+                        <p>This part is not available yet.</p>
+                    </div>
+                    <div>
+                        <p>come back soon :)</p>
+                    </div>
+                  </div>
                 </div>
             </div>
         </section>
