--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="menu__link" href="#how it work">How it work</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Clients</a>
+                        <a id="myBtn" class="menu__link" href="#">Clients</a>
                     </li>
                 </ul>
             </nav>
@@ -56,6 +56,21 @@
                 </div>
                 <div class="header-content__right">
                     <img src="images/header-img.svg" class="header-content__img" alt="Header Content">
+                </div>
+            </div>
+        </section>
+        <section id="myModal" class="modal">
+            <div>
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                  <div class="modal-inner-context">
+                    <div>
+                        <p>This part is not available yet.</p>
+                    </div>
+                    <div>
+                        <p>come back soon :)</p>
+                    </div>
+                  </div>
                 </div>
             </div>
         </section>
